# PipelineDemoHs

./: PipelineDemoHs.cabal
app/: Main.hs
