name:                PipelineDemoHs
version:             0.1.0.0
synopsis:            Demo of data pipeline in haskell
description:         Please see README.md
homepage:            https://github.com/andrevdm/PipelineDemoHs#readme
license:             BSD3
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andrevdm@p-cubed.co.za
copyright:           2016 Andre Van Der Merwe
category:            Demo
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pipelineDemoHs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protolude
                     , text
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/PipelineDemoHs
